swagger manual capture adjustment
