# routes/doctors.js
@@ -37,6 +37,7 @@ router.post(
                 lastName: "any",
                 title: "any",
                 specialty: "any",
+                subspecialty: "any",
                 organization: "any",
                 phone: "any",
                 fax: "any",
@@ -87,6 +88,7 @@ router.put(
                 lastName: "any",
                 title: "any",
                 specialty: "any",
+                subspecialty: "any",
                 organization: "any",
                 phone: "any",
                 fax: "any",
